testsuite/poke.pkl/cond-exp-diag-1.pk
/* { dg-do compile } */

var i = "foo" ? 1 : 2; /* { dg-error "expected boolean" } */
